--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,8 @@
       href="/images/icon.png">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script defer src="/socket.io/socket.io.js"></script>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.24/moment-timezone.min.js" integrity="sha512-hdV4N1wG9IDt6okHk1YvomNfa1KeBuNa4bEyGiEO0FIBA+8OJAuY8yT0p/Il7zWe7E0wuKYEyKIBnAnEKYtoAw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script defer type='text/javascript' src='https://analytics.elkjop.com/javascripts/api/viz_v1.js'></script>
     <script defer src="/js/script.js"></script>
     <title>DASHBOARD</title>
@@ -69,6 +70,7 @@
     <% } %>
     
     <script src="/js/card.js"></script>
+    <script src="/js/alert.js"></script>
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
 </html>
