--- a/views/alerts.ejs
+++ b/views/alerts.ejs
@@ -9,6 +9,8 @@
             type="<%= alert.alerttype %>"
             text="<%= alert.text %>"
             date="<%= alert.date %>"
+            title="<%= alert.title %>"
+            icon="<%= alert.icon %>"
         ></alert-row>
         <% }) %>
     </alerts-card>
