--- a/public/css/alerts.css
+++ b/public/css/alerts.css
@@ -22,7 +22,7 @@ body {
 
 .alerts {
   margin: 1rem auto;
-  width: 90%;
+  width: 300px;
   height: 600px;
   background-color: #fff;
   border-radius: 0.5rem;
@@ -118,12 +118,13 @@ body {
 .alert {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 4rem 5fr 5fr;
-      grid-template-columns: 4rem 5fr 5fr;
-  -ms-grid-rows: 1fr 2fr;
-      grid-template-rows: 1fr 2fr;
-      grid-template-areas: "type department date" "type text text";
-  padding: 0.5rem 2rem;
+  cursor: pointer;
+  -ms-grid-columns: 2rem 2fr 1fr 2rem;
+      grid-template-columns: 2rem 2fr 1fr 2rem;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+      grid-template-areas: "type title date arrow";
+  padding: 0.5rem;
   border-bottom: 1px grey dashed;
 }
 
@@ -140,6 +141,22 @@ body {
           align-items: center;
 }
 
+.alert.open {
+  -ms-grid-columns: 2rem 5fr 5fr 2rem;
+      grid-template-columns: 2rem 5fr 5fr 2rem;
+  -ms-grid-rows: 1fr 2fr;
+      grid-template-rows: 1fr 2fr;
+      grid-template-areas: "type department date arrow" "type text text arrow";
+}
+
+.alert.open .alert-title {
+  display: none;
+}
+
+.alert.open .alert-department, .alert.open .alert-text {
+  display: block;
+}
+
 .alert[data-closed=false] {
   background-color: #f7cbc8;
 }
@@ -148,6 +165,9 @@ body {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   grid-area: department;
+  display: none;
+  text-align: left;
+  padding-left: 1rem;
 }
 
 .alert .alert-type {
@@ -155,7 +175,7 @@ body {
   -ms-grid-row-span: 2;
   -ms-grid-column: 1;
   grid-area: type;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 .alert .alert-text {
@@ -163,17 +183,54 @@ body {
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-area: text;
+  display: none;
+  text-align: left;
+  padding-left: 1rem;
+  font-size: 0.9rem;
 }
 
 .alert .alert-date {
   -ms-grid-row: 1;
   -ms-grid-column: 3;
   grid-area: date;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+  padding-right: 1rem;
+}
+
+.alert .alert-title {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: title;
+  display: block;
+  text-align: left;
+  padding-left: 1rem;
+}
+
+.alert .alert-arrow {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 4;
+  grid-area: arrow;
 }
 
 @media only screen and (min-width: 700px) {
   .alerts {
     height: 80vh;
+    width: 90%;
+    min-width: 300px;
+  }
+}
+
+@media only screen and (min-width: 1360px) {
+  .alert {
+    padding: 0.5rem 2rem;
+    -ms-grid-columns: 4rem 5fr 5fr;
+        grid-template-columns: 4rem 5fr 5fr;
+  }
+  .alert .alert-type {
+    font-size: 1.5rem;
   }
 }
 /*# sourceMappingURL=alerts.css.map */
