--- a/public/css/alerts.scss
+++ b/public/css/alerts.scss
@@ -2,7 +2,7 @@
 
 .alerts {
     margin: 1rem auto;
-    width: 90%;
+    width: 300px;
     height: 600px;
     background-color: $bar-font-color;
     border-radius: 0.5rem; 
@@ -78,11 +78,11 @@
 
 .alert {
     display: grid;
-    grid-template-columns: 4rem 5fr 5fr;
-    grid-template-rows: 1fr 2fr;
+    cursor: pointer;
+    grid-template-columns: 2rem 2fr 1fr 2rem;
+    grid-template-rows: 1fr;
     grid-template-areas: 
-        "type department date"
-        "type text text";
+        "type title date arrow";
         
     & > div {
         text-align: center;
@@ -90,23 +90,55 @@
         justify-content: center;
         align-items: center;
     }
-    padding: 0.5rem 2rem;
+    &.open {
+        grid-template-columns: 2rem 5fr 5fr 2rem;
+        grid-template-rows: 1fr 2fr;
+        grid-template-areas: 
+        "type department date arrow"
+        "type text text arrow";
+        .alert-title {
+            display: none;
+        }
+        .alert-department, .alert-text  {
+            display: block;
+        }
+    }
+
+    padding: 0.5rem;
     border-bottom: 1px grey dashed;
     &[data-closed=false]{
         background-color: lighten($color-bad, 40%);
     }
     .alert-department {
         grid-area: department;
+        display: none;
+        text-align: left;
+        padding-left: 1rem;
     }
     .alert-type {
         grid-area: type;
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
     .alert-text {
         grid-area: text;
+        display: none;
+        text-align: left;
+        padding-left: 1rem;
+        font-size: 0.9rem;
     }
     .alert-date {
         grid-area: date;
+        justify-content: right;
+        padding-right: 1rem;
+    }
+    .alert-title {
+        grid-area: title;
+        display: block;
+        text-align: left;
+        padding-left: 1rem;
+    }
+    .alert-arrow {
+        grid-area: arrow;
     }
 }
 
@@ -114,5 +146,18 @@
 @media only screen and (min-width: $small-size) {
     .alerts {
         height: 80vh;
+        width: 90%;
+        min-width: 300px;
+    }
+    
+}
+
+@media only screen and (min-width: $big-size){
+    .alert {
+        padding: 0.5rem 2rem;
+        grid-template-columns: 4rem 5fr 5fr;
+        .alert-type {
+            font-size: 1.5rem;
+        }
     }
 }
