--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -42,7 +42,7 @@
                     <% if (locals.user) {%>
                     <li><a href="/auth/logout">Log out</a></li>
                     <% } else { %>
-                    <!-- <li><a href="/auth/azure/login">Log in</a></li> -->
+                    <li><a href="/auth/azure/login">Log in</a></li>
                     <% } %>
                 </ul>
             </div>
