--- a/public/css/alerts.css
+++ b/public/css/alerts.css
@@ -226,8 +226,8 @@ body {
 @media only screen and (min-width: 1360px) {
   .alert {
     padding: 0.5rem 2rem;
-    -ms-grid-columns: 4rem 5fr 5fr;
-        grid-template-columns: 4rem 5fr 5fr;
+    -ms-grid-columns: 2rem 5fr 5fr 2rem;
+        grid-template-columns: 2rem 5fr 5fr 2rem;
   }
   .alert .alert-type {
     font-size: 1.5rem;
