--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -117,6 +117,15 @@ header {
         width: 2rem;
         right: 1.5rem;
         border-radius: 50%;
+                border-radius: 0;
+                //bottom: 0;
+                right: 0;
+                top: 0;
+                //top: 0;
+                width: 100vw;
+                height: 100vh;
+                transform-origin: top right;
+                transform: scale(0);
         transition: all 0.5s ease-in-out 1s;
 
         &.loggedin {
@@ -139,8 +148,12 @@ header {
             align-items: center;
 
             ul {
-                display: block;
+                //display: block;
                 animation: showList 0.5s 1s ease-in-out forwards;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                align-items: center;
             }
 
             li {
@@ -152,6 +165,8 @@ header {
                 padding: 1rem 2rem;
                 background-color: $bar-font-color;
                 transition: all 125ms ease-in-out;
+                width: 60%;
+                
 
                 a {
                     text-decoration: none;
@@ -191,20 +206,22 @@ header {
         }
         @keyframes openmenu {
             10% {
-                width: 6rem;
+                transform: scale(0);
+                /*width: 6rem;
                 height: 6rem;
                 right: 0;
                 top: 0
-                //border-radius: 0;
+                //border-radius: 0;*/
             }
             to {
-                border-radius: 0;
+                transform: scale(1);
+                /*border-radius: 0;
                 //bottom: 0;
                 right: 0;
                 top: 0;
                 //top: 0;
                 width: 100vw;
-                height: 100vh;
+                height: 100vh;*/
             }
         }
     }
@@ -214,37 +231,49 @@ header {
 @media only screen and (min-width: $small-size){
 
     header {
-        .navitems.open ul {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
+        .navitems{
+            width: 30vw;
 
-            li {
-                flex-basis: 40%;
-                
+            &.open ul {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                align-items: center;
+    
+                /*li {
+                    flex-basis: 40%;
+                    
+                }
+                a {
+                    font-weight: bolder;
+                    font-size: 1.2rem;
+                }*/
             }
-            a {
-                font-weight: bolder;
-                font-size: 1.2rem;
-            }
+
+
         }
+        
 
     }
 }
 @media only screen and (min-width: $big-size){
 
     header {
-        .navitems.open ul {
+        .navitems{
+            width: 20vw;
             
-            li {
-                flex-basis: 30%;
+            .open ul {
                 
-            }
-            a {
-                font-size: 1.4rem;
+                /*li {
+                    flex-basis: 30%;
+                    
+                }
+                a {
+                    font-size: 1.4rem;
+                }*/
             }
         }
+        
 
     }
 }
