--- a/public/css/alerts.scss
+++ b/public/css/alerts.scss
@@ -48,24 +48,103 @@
         border: none;
         font-size: 1rem;
         height: 2rem;
+        cursor: pointer;
     }
     
     
     /* Modal Content/Box */
     .modal-content {
+        position: relative;
         background-color: #fefefe;
         margin: 15% auto; /* 15% from the top and centered */
         padding: 20px;
         border: 1px solid #888;
-        width: 80%; /* Could be more or less, depending on screen size */
+        width: 50%; /* Could be more or less, depending on screen size */
+        .modal-header {
+            background-color: $brand-color;
+            color: $bar-font-color;
+            font-size: 3rem;
+            padding: 0.5rem;
+        }
+        .modal-subtext {
+            font-style: italic;
+            padding: 0.5rem;
+        }
+        form {
+            border: 1px solid $brand-color;
+            padding: 0.5rem;
+            display: flex;
+            flex-direction: column;
+            label {
+                font-size: 1.2rem;
+                margin-top: 0.5rem;
+            }
+            select {
+                //margin-top: 0.5rem;
+                padding: 0.5rem 0;
+                //margin-left: 1rem;
+                border: none;
+                //background-color: $color-light-grey;
+                option {
+                    //background-color: $brand-color;
+                }
+            }
+            .department-selector {
+                display: flex;
+                flex-direction: column;
+                margin-top: 0.5rem;
+                span {
+                    font-size: 1.2rem;
+                    flex-basis: 100%;
+                }
+                > div {
+                    margin-top: 0.5rem;
+                }
+                input[type=checkbox]{
+                    //margin-top: 0.5rem;
+                    display: none;
+                    & + label {
+                        padding: 0.5rem;
+                        display: inline-block;
+                        border: 1px solid #141b4d;
+                        cursor: pointer;
+                        font-size: 1rem;
+                    }
+                    &:checked + label {
+                        
+                        background-color: #141b4d;
+                        color: white;
+                        
+                    }
+                }
+            }
+            textarea {
+                margin: 1rem 0;
+                padding: 0.5rem;
+            }
+            input[type=submit] {
+                cursor: pointer;
+                background-color: $brand-color;
+                color: $bar-font-color;
+                padding: 1rem;
+                //border-radius: 1rem;
+                border: none;
+                font-size: 1.3rem;
+                font-weight: bold;
+            }
+        }
     }
     
     /* The Close Button */
     .close {
-        color: #aaa;
-        float: right;
+        color: $brand-color;
+        //float: right;
         font-size: 28px;
         font-weight: bold;
+        cursor: pointer;
+        position: absolute;
+        right: 0rem;
+        top: -0.5rem;
     }
     
     .close:hover,
