--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -50,7 +50,7 @@
     </div> -->
 
     <div class="container">
-
+        <admin-card></admin-card>
         <summary-card name="Denmark" id="dk" icon="grid" showLoader="true"></summary-card>
         <summary-card name="Finland" id="fi" icon="grid"></summary-card>
         <summary-card name="Norway" id="no" icon="grid"></summary-card>
@@ -67,5 +67,5 @@
 <script>
     let key = 'nordic'
     let page = key
-    let listeners = ['alerts']
+    let listeners = ['alerts', 'admin']
 </script>
