--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,7 +38,7 @@
                     <li data-alter="norway"><a href="/norway">Norway</a></li>
                     <li data-alter="sweden"><a href="/sweden">Sweden</a></li>
                     <li data-alter="helpdesk"><a href="/helpdesk">Helpdesk</a></li>
-                    <li data-alter="kitchen"><a href="/kitchen">Kitchen&Interior</a></li>
+                    <li data-alter="kitchen"><a href="/kitchen">Kitchen</a></li>
                     <% if (locals.user) {%>
                     <li><a href="/auth/logout">Log out</a></li>
                     <% } else { %>
