Added link to new UI

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -43,6 +43,7 @@
                     <li data-alter="sweden"><a href="/sweden">Sweden</a></li>
                     <li data-alter="helpdesk"><a href="/helpdesk">Helpdesk</a></li>
                     <li data-alter="kitchen"><a href="/kitchen">Kitchen</a></li>
+                    <li data-alter="vue"><a href="/vue">New dashboard</a></li>
                     <% if (locals.user) {%>
                     <li><a href="/auth/logout">Log out</a></li>
                     <% } else { %>
