New API from Kindly

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,6 +1,6 @@
     <div class="container m-5">
 
-      <% chatData.messages.forEach(m=>{
+      <% chatData.chat.messages.forEach(m=>{
         let mess = m.message;
 
         if (m.from_bot && mess ){
